crates/strider-analyze/tests/snapshots/v3__mips32le__complex__call_uses_call_return.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400800:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x400808:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v7" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v9" [color="#888888", style=dashed];
  "v9" -> "8" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v10" [color="#888888", style=dashed];
  "v10" -> "8" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "4" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
