crates/strider-analyze/tests/snapshots/v3__mips32le__complex__dispatch_on_flag.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x4007f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "16" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v22" [color="#888888", style=dashed];
  "v22" -> "20" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v23" [color="#888888", style=dashed];
  "v23" -> "20" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v24" [color="#888888", style=dashed];
  "v24" -> "20" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "6" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
